...
                            <constraint firstItem="Epj-yJ-xQ8" firstAttribute="centerX" secondItem="9lT-aK-4BX" secondAttribute="centerX" id="Mym-vP-l8r"/>
                            <constraint firstItem="wtp-GO-kos" firstAttribute="trailing" secondItem="m65-Ct-2g8" secondAttribute="trailing" constant="-16" id="wtK-U5-vf2"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="N4x-na-kzn"/>
                    <connections>
                        <outlet property="authButton" destination="wtp-GO-kos" id="9Eq-GU-bzM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gz5-NO-bcn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-281" y="-1088"/>
        </scene>
...
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <outlet property="cellImage" destination="r0a-zX-kyo" id="bUw-EW-vLV"/>
                                            <outlet property="dateLabel" destination="ViP-LI-ua1" id="etg-Gw-mxw"/>
                                            <outlet property="dateView" destination="K43-Tv-m2E" id="30X-hD-MSi"/>
                                            <outlet property="likeButton" destination="Ban-A5-M1y" id="QTA-ng-Rc2"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="YJD-Ib-cwc"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Pp4-6p-TXj"/>
...
                            <constraint firstItem="M5x-ru-shs" firstAttribute="trailing" secondItem="e7S-l2-8rc" secondAttribute="trailing" id="w29-dT-ZXQ"/>
                            <constraint firstItem="M5x-ru-shs" firstAttribute="leading" secondItem="e7S-l2-8rc" secondAttribute="leading" id="x6k-fA-aBR"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="iWf-uP-inN"/>
                    <connections>
                        <outlet property="backButton" destination="9Xr-jt-PWS" id="c2f-Gf-ysc"/>
                        <outlet property="imageView" destination="9un-Z2-daC" id="56O-at-MWZ"/>
                        <outlet property="scrollView" destination="M5x-ru-shs" id="Uss-Rs-zXq"/>
                        <outlet property="sharingButton" destination="set-Wx-J9S" id="XU1-r7-h0B"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Cwd-EE-Jpd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
