...
              let url = URL(string: profileImageURL) else { return }
        view?.updateAvatarDetails(url: url)
    }
    
    func showAuthErrorAlert() {
        let alertController = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert
        )
        let okAction = UIAlertAction(title: "Да", style: .default) { _ in
            self.profileLogoutService?.removeData()
        }
        let noAction = UIAlertAction(title: "Нет", style: .default) { _ in }

        alertController.addAction(okAction)
        alertController.addAction(noAction)
...
