...
    
    private func setupExitButton() {
        let exitImage = UIImage(resource: .exitButton)
        exitButton.setImage(exitImage, for: .normal)
        exitButton.addTarget(self, action: #selector(didTapExitButton(_:)), for: .touchUpInside)
        
        exitButton.accessibilityIdentifier = "logoutButton"
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        
        view.addSubview(exitButton)
        
        NSLayoutConstraint.activate([
            exitButton.widthAnchor.constraint(equalToConstant: 44),
...
